# Vexa

./: .gitignore  README.md  TODO.md  build.gradle.kts  feature_parity.md  rootfs_required.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/critical/vexaemulator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/common/: path_checks.cpp  path_checks.h  paths.h  preflight_paths.h  status.h
app/src/main/cpp/logging/: crash_signals.cpp  crash_signals.h  native_log.cpp  native_log.h
app/src/main/cpp/runtime/: launch.cpp  launch.h  preflight.h  runtime_jni.cpp  runtime_wrapper.cpp  runtime_wrapper.h  vexa_native_log.cpp  vexa_native_log.h
app/src/main/cpp/runtime/init/: allocator.cpp  allocator.h  client.cpp  client.h  config.cpp  config.h  config_init.cpp  config_init.h  core.cpp  core.h  core_init.cpp  core_init.h  execute.cpp  execute.h  kernel.cpp  kernel.h  logging.cpp  logging.h  logging_init.cpp  logging_init.h  preflight.cpp  preflight.h  resources.h  runtime_state.h  syscalls.cpp  syscalls.h  thread.cpp  thread.h  thread_init.cpp  thread_init.h  thunk.cpp  thunk.h
app/src/main/cpp/utils/: jni_scoped.h
app/src/main/cpp/wrapper/: jni.cpp
app/src/main/java/com/critical/vexaemulator/: GameActivity.kt  MainActivity.kt  RuntimeBridge.kt
app/src/main/java/com/critical/vexaemulator/logging/: DumpWriter.kt  LogCategory.kt  LogLevel.kt  LogStore.kt  VexaLogEntry.kt  VexaLogger.kt
app/src/main/java/com/critical/vexaemulator/runtime/: LaunchRequest.kt  NativeLogSink.kt  RuntimeIpc.kt  RuntimeService.kt  RuntimeWorkerService.kt
app/src/main/java/com/critical/vexaemulator/ui/: GameDebugPanel.kt  GameLoadingOverlay.kt
app/src/main/java/com/critical/vexaemulator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/critical/vexaemulator/: ExampleUnitTest.kt
docs/: AI_USAGE_POLICY.md  ARCHITECTURE.md  DEBUGGING_STRATEGY.md  FILE_TRIAGE_TEMPLATE.md  FINDINGS_AND_QUIRKS.md  PROJECT_OVERVIEW.md  REWRITE_PLAN.md  TODO.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_android_media_stack.sh  build_android_openal_soft.sh  build_android_sdl3.sh  build_android_sdl3_image.sh  configure_android_preflight_test.sh  configure_fex_android.sh  configure_fex_thunkgen.sh  fetch_fex_rootfs.sh  prepare_fex_rootfs.sh  pull_runtime_logs.sh
